# Chenier

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  main.c  makeSprite.sh
.github/workflows/: build.yml
assets/: winning.txt
include/: card.h  game.h  graphic-context.h  parser.h  stack.h
player/: CMakeLists.txt  game-render.c  graphic-context.c  player.c  player.h  random.txt
src/: CMakeLists.txt  card.c  card.h  game.c  game.h  graphic-context.c  graphic-context.h  random.txt  stack.c  stack.h
src/battle/: battle.c  battle.h
src/c4/: c4.c  c4.h
src/klondike/: klondike.c  klondike.h  random.txt
src/parser/: parser.c
src/qll/: qll.c  qll.h
src/r7/: r7.c  r7.h
src/up-down/: up-down.c  up-down.h
tester/: CMakeLists.txt  battle-tester.c  card-game-tester.c  card-stack-tester.c  card-stack-tester.h  klondike-tester.c  r7-tester.c  tester.c  tester.h
